# ai-app-lab

demohouse/mobile-use/: .gitignore  MIGRATION.md  NOTICE.zh-CN.md  PROJECT_EXPLAINED.zh-CN.md  README.md  README.zh-CN.md  README_zh.md  restart.sh  start.sh  stop.sh
demohouse/mobile-use/mobile_agent/: app.py
demohouse/mobile-use/mobile_agent_skill/: app.py  (+2 more)
demohouse/mobile-use/mobile_use_service/: app.py  config.toml  main.py  pyproject.toml  requirements.txt
demohouse/mobile-use/mobile_use_service/mobile_use_service/: __init__.py
demohouse/mobile-use/mobile_use_service/mobile_use_service/client/: __init__.py  auth.py  commands.py  compat.py  volc_openapi.py
demohouse/mobile-use/mobile_use_service/mobile_use_service/config/: settings.py
demohouse/mobile-use/mobile_use_service/mobile_use_service/exception/: __init__.py
demohouse/mobile-use/mobile_use_service/mobile_use_service/models/: __init__.py  result.py  session.py
demohouse/mobile-use/mobile_use_service/mobile_use_service/routers/: __init__.py  mobile_use.py
demohouse/mobile-use/mobile_use_service/mobile_use_service/service/: __init__.py  mobile_use_service.py
demohouse/mobile-use/mobile_use_service/tests/: test_imports.py
demohouse/mobile-use/mobile_use_service/tests/client/: test_volc_openapi.py
demohouse/mobile-use/mobile_use_service/tests/models/: test_models.py
demohouse/mobile-use/mobile_use_service/tests/routers/: test_mobile_use_router.py
demohouse/mobile-use/mobile_use_service/tests/service/: test_actions.py  test_failure_behavior.py  test_screenshot_result.py  test_service.py
(+115 files in other folders)
